# qclockcare_backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: api-smoke.yml
.puku/plans/: email-verification-e2e.md
alembic/: env.py
alembic/versions/: 0001_base.py  0001_extensions_enums_identity_agencies.py  0002_rls_scaffold.py  0003_token_tables.py  0004_staff_qualifications.py  0005_patients_guardians.py  0006_appointments.py  0007_visit_verification.py  0008_notifications.py  0009_audit_logs.py  0010_notifications_enhancements.py  0011_locations.py  0012_appointment_lifecycle.py  0013_audit_action_read.py
docs/flow/: PR_BODY.md  agencies_flow_create.dot  agencies_flow_delete.dot  agencies_flow_list.dot  agencies_flow_patch.dot
postman/: QlockCare_API.postman_collection.json  README.md  _build_collection.py
postman/environments/: CI.postman_environment.json  Local.postman_environment.json  Staging.postman_environment.json
scripts/: run_newman.sh  seed_test_user.py
src/: __init__.py  main.py
src/core/: __init__.py  config.py  database.py  exceptions.py  health.py  logging.py  middleware.py  security.py
src/modules/: __init__.py
src/modules/agencies/: models.py  router.py  schemas.py  service.py
src/modules/appointments/: __init__.py  events.py  models.py  router.py  schemas.py  service.py
src/modules/audit_logs/: __init__.py  models.py  router.py  schemas.py  service.py
src/modules/auth/: email_service.py
src/modules/identity/: auth_service.py  dependencies.py  jwt_service.py  models.py  otp_service.py  password_utils.py  router.py  schemas.py
src/modules/locations/: __init__.py  models.py  router.py  schemas.py  service.py
src/modules/notifications/: __init__.py  background.py  broadcast.py  channels.py  deliveries.py  integrations.py  models.py  preferences.py  router.py  schemas.py  service.py
src/modules/patients/: __init__.py  models.py  router.py  schemas.py  service.py
src/modules/portal/: __init__.py  router.py  schemas.py  service.py
src/modules/staff/: __init__.py  models.py  router.py  schemas.py  service.py
src/modules/visits/: models.py  router.py  schemas.py  service.py
src/shared/: __init__.py
src/shared/domain/: __init__.py  base_entity.py  enum_mapping.py  enums.py
src/shared/repositories/: __init__.py  base_repository.py
src/shared/schemas/: __init__.py  api_response.py  docs.py  error.py  pagination.py
src/shared/storage/: __init__.py  base.py  factory.py  s3_adapter.py  supabase_adapter.py
src/shared/utils/: __init__.py  datetime_utils.py
supabase/: config.toml
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_agencies_flow.py  test_appointments_flow.py  test_appointments_lifecycle_flow.py  test_audit_logs_flow.py  test_audit_logs_write_paths.py  test_auth_flow.py  test_health.py  test_locations_flow.py  test_notifications_badge_flow.py  test_notifications_broadcast_flow.py  test_notifications_deliveries_flow.py  test_notifications_flow.py  test_notifications_prefs_flow.py  test_patients_flow.py  test_portal_flow.py  test_rls_smoke.py  test_staff_flow.py  test_visits_flow.py
tests/unit/: __init__.py  test_agencies_schemas.py  test_appointment_event_types.py  test_appointments_lifecycle_schemas.py  test_appointments_schemas.py  test_appointments_state_machine.py  test_audit_action_read.py  test_audit_logs_schemas.py  test_audit_logs_service.py  test_auth_accept_invitation.py  test_auth_email_retry.py  test_auth_email_service.py  test_auth_forgot_password_cooldown.py  test_auth_invitation_email.py  test_locations_schemas.py  test_migrations.py  test_models.py  test_notifications_channels.py  test_notifications_delivery_split.py  test_notifications_prefs_schemas.py  test_notifications_schemas.py  test_openapi_docs.py  test_pagination.py  test_patients_invite_result.py  test_patients_schemas.py  test_portal_resolvers.py  test_portal_schemas.py  test_security.py  test_settings.py  test_staff_invite_result.py  test_staff_qualification_download.py  test_staff_schemas.py  test_storage_signed_url.py  test_visits_schemas.py  test_visits_state_machine.py
