[project]
name = "qlockcare-backend"
version = "0.1.0"
description = "Backend for QlockCare — home and community-based care management SaaS"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "QlockCare Engineering", email = "engineering@qlockcare.com" },
]

dependencies = [
    # HTTP
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",

    # Validation & settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",

    # Auth & security
    "pyjwt[crypto]>=2.10.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=44.0.0",

    # Storage
    "boto3>=1.35.0",
    "aioboto3>=13.3.0",

    # Supabase (only used if STORAGE_BACKEND=supabase)
    "supabase>=2.10.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # Observability
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "sentry-sdk[fastapi]>=2.19.0",

    # HTTP client (used by services for outbound calls)
    "httpx>=0.28.0",

    # Misc
    "python-json-logger>=2.0.7",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-redis>=4.6.0",
    "freezegun>=1.5.0",
    "boto3-stubs[s3]>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ----------------------------------------------------------------------
# Ruff (linter + formatter)
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length is handled by formatter
    "B008",   # do not perform function calls in argument defaults (FastAPI uses Depends)
    "UP038",  # isinstance tuple form — keeps things readable
    "TC001",  # we don't enforce "move app imports to TYPE_CHECKING" — readability over micro-perf
    "TC002",  # ditto for third-party
    "TC003",  # ditto for stdlib
    "UP046",  # `Generic[T]` (vs `Generic[T]` syntax sugar) is the clearer choice for readers
    "UP047",  # same as above for generic functions
    "N818",   # `AppException` is intentionally not suffixed — it's the base, others end in `Error`
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------------------------------------------------------
# MyPy (type checker)
# ----------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = ["src"]
ignore_missing_imports = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["alembic.*", "tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["src.core.exceptions", "src.main"]
warn_unused_ignores = false
disable_error_code = ["arg-type", "misc"]

# ----------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "unit: pure unit tests (no DB, no HTTP)",
    "integration: tests that hit the DB or HTTP stack",
    "slow: tests that take >1s",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:botocore.*",
    "ignore::DeprecationWarning:dateutil.*",
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

# ----------------------------------------------------------------------
# Coverage
# ----------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/migrations/*",
    "src/**/__init__.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 80